# coinbase

./: .eslintrc.json  .gitignore  README.md  package.json
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployMemoryOnly.s.sol
contracts/src/: AgentIdentityRegistry.sol  GuardrailAttestationRegistry.sol
contracts/src/erc8004/: AgentEscrow.sol  IdentityRegistry.sol  MemoryRegistry.sol  ReputationRegistry.sol  ValidationRegistry.sol
contracts/src/erc8004/interfaces/: IIdentityRegistry.sol
demo/: index.html  package-lock.json  package.json
examples/agentkit-demo/: index.ts  marketplace-demo.ts  memory-test.ts  merkle-test.ts  package.json
examples/basic/: index.ts  package.json
examples/langchain/: index.ts  package.json
examples/openai-agents/: index.ts  package.json
prover-service/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
prover-service/src/: jolt_atlas.rs  main.rs  prover.rs  types.rs  verification.rs
scripts/: e2e-test.ts
services/kinic-service/: .env.example  Dockerfile  README.md  icp_client.py  main.py  requirements.txt  setup-icp.sh  setup-real-kinic.sh  setup-windows.ps1  start-kinic.sh
