[package]
name = "jolt-atlas-prover-service"
version = "0.1.0"
edition = "2021"
description = "HTTP prover service for Jolt Atlas zkML proofs"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
sha2 = "0.10"
hex = "0.4"

# ONNX runtime for model inference
ort = { version = "2.0", default-features = false, features = ["ndarray"] }
ndarray = "0.15"

# Jolt Atlas (zkML proving)
# NOTE: In production, uncomment and use the actual jolt-atlas crate
# jolt-atlas = { git = "https://github.com/ICME-Lab/jolt-atlas" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.9"
base64 = "0.21"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
