[package]
name = "jolt-atlas-prover-service"
version = "0.1.0"
edition = "2021"
description = "HTTP prover service for Jolt Atlas zkML proofs"
license = "MIT"

[features]
default = ["mock-prover"]
# Use mock prover (for development without Jolt Atlas)
mock-prover = []
# Use real Jolt Atlas prover (requires jolt-atlas crate)
real-prover = ["jolt-sdk", "ark-bn254", "ark-serialize"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
sha2 = "0.10"
hex = "0.4"

# ONNX runtime for model inference
ort = { version = "2.0", default-features = false, features = ["ndarray"], optional = true }
ndarray = "0.15"

# Jolt SDK (zkVM proving system)
# When real-prover feature is enabled, uses the actual Jolt SDK
jolt-sdk = { git = "https://github.com/a16z/jolt", optional = true }

# Arkworks for proof serialization (used by Jolt)
ark-bn254 = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }

# Jolt Atlas (zkML extension) - uncomment when publicly available
# jolt-atlas = { git = "https://github.com/ICME-Lab/jolt-atlas", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.9"
base64 = "0.22"
once_cell = "1.19"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1

# Build profile for faster incremental builds during development
[profile.dev.package."*"]
opt-level = 2
